# HGEngineReloaded

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  azure-pipelines.yml
example/: CMakeLists.txt  main.cpp
example/Assets/Behaviours/: LocalRotation.hpp  RotationBehaviour.hpp
example/Assets/Materials/: LightMaterial.cpp  LightMaterial.hpp  PBRMaterial.cpp  PBRMaterial.hpp
example/Assets/Models/: example.dae  example.fbx  example.mtl  example.stl  example_binary.fbx  source.blend
example/Assets/Scenes/: TestScene.cpp  TestScene.hpp
examples/Blitting/: CMakeLists.txt  main.cpp
examples/Blitting/Assets/Materials/: TextureMaterial.cpp  TextureMaterial.hpp
examples/Blitting/Assets/Scenes/: BlitScene.cpp  BlitScene.hpp
examples/Orbital/: CMakeLists.txt  main.cpp
examples/Orbital/Assets/Behaviours/: LocalRotation.hpp
examples/Orbital/Assets/Materials/: PlainMaterial.cpp  PlainMaterial.hpp
examples/Orbital/Assets/Scenes/: OrbitalScene.cpp  OrbitalScene.hpp
examples/RenderToTexture/: CMakeLists.txt  main.cpp
examples/RenderToTexture/Assets/Behaviours/: RenderToTextureBehaviour.cpp  RenderToTextureBehaviour.hpp
examples/RenderToTexture/Assets/Materials/: TextureMaterial.cpp  TextureMaterial.hpp
examples/RenderToTexture/Assets/Scenes/: RenderToTextureScene.cpp  RenderToTextureScene.hpp
examples/TransparentExample/: CMakeLists.txt  main.cpp
examples/TransparentExample/Assets/Materials/: GlassMaterial.cpp  GlassMaterial.hpp
examples/TransparentExample/Assets/Scenes/: TransparentScene.cpp  TransparentScene.hpp
src/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/Core/include/: Application.hpp  Behaviour.hpp  BuildProperties.hpp  CountStatistics.hpp  Data.hpp  GameObject.hpp  GameObjectBuilder.hpp  GameObjectCache.hpp  Input.hpp  Logging.hpp  ResourceAccessor.hpp  ResourceManager.hpp  Scene.hpp  ThreadPool.hpp  TimeStatistics.hpp  Transform.hpp
src/Core/src/: Application.cpp  Application.tpp  Behaviour.cpp  Benchmark.cpp  CachableObject.cpp  CountStatistics.cpp  Data.cpp  EditorApplication.cpp  FilesystemResourceAccessor.cpp  GameObject.cpp  GameObjectBuilder.cpp  GameObjectCache.cpp  Input.cpp  Logging.cpp  ResourceCache.cpp  ResourceManager.cpp  Scene.cpp  ThreadPool.cpp  TimeStatistics.cpp  Transform.cpp
src/Core/tests/: CMakeLists.txt  TestApplication.cpp  TestBehaviour.cpp  TestBenchmark.cpp  TestCachableResource.cpp  TestFilesystemResourceAccessor.cpp  TestTransform.cpp  Transform.cpp  transform.cpp
src/Networking/: CMakeLists.txt
src/Networking/Base/: CMakeLists.txt
src/Networking/Base/src/: AddressIPv4.cpp  Client.cpp  Server.cpp  StableConnection.cpp  UnstableConnection.cpp  UnstableConnectionController.cpp
src/Networking/Base/tests/: TestUnstableConnectionController.cpp
src/Physics/: CMakeLists.txt
src/Physics/Base/: CMakeLists.txt
src/Physics/Base/include/: PhysicsController.hpp
src/Physics/Base/src/: PhysicsController.cpp
src/Physics/PlayRho/: CMakeLists.txt
src/Physics/PlayRho/include/: Controller.hpp  DebugDraw.hpp  DebugSettings.hpp
src/Physics/PlayRho/libraries/: CMakeLists.txt
src/Physics/PlayRho/src/: Controller.cpp  DebugDraw.cpp
src/Rendering/: CMakeLists.txt
src/Rendering/Base/: CMakeLists.txt
src/Rendering/Base/include/: AbstractRenderDataProcessor.hpp  Camera.hpp  CubeMap.hpp  CubeMapTexture.hpp  Gizmos.hpp  Material.hpp  MaterialCollection.hpp  MaterialValue.hpp  RenderBehaviour.hpp  RenderData.hpp  RenderSpecificData.hpp  RenderTarget.hpp  Renderer.hpp  RenderingPipeline.hpp  Shader.hpp  SystemController.hpp  Texture.hpp
src/Rendering/Base/libraries/: CMakeLists.txt
src/Rendering/Base/src/: AbstractRenderDataProcessor.cpp  BlitData.cpp  Camera.cpp  CubeMap.cpp  CubeMapTexture.cpp  Gizmos.cpp  Material.cpp  MaterialCollection.cpp  MaterialValue.cpp  RenderBehaviour.cpp  RenderData.cpp  RenderTarget.cpp  Renderer.cpp  RenderingPipeline.cpp  Shader.cpp  ShaderData.cpp  SystemController.cpp  Texture.cpp
src/Rendering/OpenGL/: CMakeLists.txt
src/Rendering/OpenGL/include/: ForwardRenderingPipeline.hpp  GLFWSystemController.hpp  GizmosRenderer.hpp  ImGuiRenderer.hpp  Shader.hpp
src/Rendering/OpenGL/libraries/: CMakeLists.txt
src/Rendering/OpenGL/src/: BlitRenderer.cpp  ForwardRenderingPipeline.cpp  GLFWSystemController.cpp  GizmosRenderer.cpp  ImGuiRenderer.cpp  Shader.cpp
src/Rendering/Vulkan/: CMakeLists.txt
src/Rendering/Vulkan/src/: RenderingPipeline.cpp
src/Standard/: CMakeLists.txt
src/Standard/include/: FilesystemResourceAccessor.hpp
src/Standard/include/Behaviours/: DebugControllerOverlay.hpp  FPSCameraMovement.hpp  IngameConsole.hpp  ServiceInformationOverlay.hpp  TiledMap.hpp  TiledMapCollider.hpp  TiledMapRenderer.hpp
src/Standard/include/MeshLoaders/: OBJ.hpp
src/Standard/src/: FilesystemResourceAccessor.cpp
src/Standard/src/Behaviours/: DebugControllerOverlay.cpp  FPSCameraMovement.cpp  IngameConsole.cpp  ServiceInformationOverlay.cpp  TiledMap.cpp  TiledMapCollider.cpp  TiledMapRenderer.cpp
src/Standard/tests/: CMakeLists.txt  TestTiled.cpp  tiled.cpp
src/System/: CMakeLists.txt
src/System/PC/: CMakeLists.txt
src/Tools/: CMakeLists.txt
src/Tools/PackageProcessor/: CMakeLists.txt
src/Tools/PackageProcessorLibrary/: CMakeLists.txt
src/Tools/ToolsCore/: CMakeLists.txt
src/Utils/: CMakeLists.txt
src/Utils/include/: Color.hpp  DoubleBufferContainer.hpp  FutureHandler.hpp  Mesh.hpp  Model.hpp  PhysicalResource.hpp  Platform.hpp  Rect.hpp  StringTools.hpp  Surface.hpp  UniqueMergeContainer.hpp  Vertex.hpp  base64.hpp  glmex.hpp  zlib.hpp
src/Utils/libraries/: CMakeLists.txt
src/Utils/src/: Color.cpp  DoubleBufferContainer.cpp  Logging.cpp  Mesh.cpp  Model.cpp  PhysicalResource.cpp  Rect.cpp  StringTools.cpp  Surface.cpp  UniqueMergeContainer.cpp  Vertex.cpp
src/Utils/tests/: CMakeLists.txt  TestBase64.cpp  TestColor.cpp  TestDoubleBufferContainer.cpp  TestFutureHandler.cpp  TestMesh.cpp  TestRect.cpp  TestStringTools.cpp  TestZLib.cpp  base64.cpp  color.cpp  zlib.cpp
testing/: CMakeLists.txt  main.cpp
(+279 files in other folders)
